Fix GUI state handling and CI build setup